# FREC

./: .gitignore  LICENSE  Makefile  Makefile.am  configure.ac
benchmark/: README.md  benchmark.sh  compare-outputs.sh  extra-patterns.txt  generate-text.sh  make-executables.sh  run-benchmark-ff.sh  run-benchmark-multi.sh  run-benchmark.sh  test-inputs.txt  time-run.sh
benchmark/inputs/: inputs-enwiki-multi.txt  inputs-enwiki.txt  inputs-generated.txt  inputs-prefix-none.txt  inputs-single-test-multi-inputs.txt  nothing-multi.txt  nothing-single.txt
benchmark/sgrep/: Makefile  sgrep.c
benchmark/sgrep-libc/: Makefile
benchmark/sgrep-tre/: Makefile
benchmark/wrappers/: Makefile  grep-ff-multi.c  grep-ff-single.c  grep-multi.c  grep-single.c
lib/: Makefile.am  boyer-moore.c  boyer-moore.h  compile.c  compile.h  config.h  convert.c  frec.h  hashtable.c  heuristic.c  heuristic.h  interface.c  match.c  match.h  mregex.h  wu-manber.c  wu-manber.h
lib/libfrec/: Makefile  Makefile.am  boyer-moore-exec.c  boyer-moore-prep.c  boyer-moore.c  boyer-moore.h  compile.c  compile.h  config.h  convert.c  convert.h  frec.h  hashtable.c  hashtable.h  heuristic.c  heuristic.h  heuristic2.c  interface.c  match.c  mregex.h  regex-parser.h  wu-manber.c  wu-manber.h
libfrec/: Makefile.am
libfrec/include/: frec-config.h  frec-match.h  frec-types.h  frec.h
libfrec/lib/: Makefile.am  bm-comp.c  bm-exec.c  bm-type.c  bm-type.h  bm.h  boyer-moore-exec.c  boyer-moore-prep.c  boyer-moore.h  compile.c  compile.h  config.h  convert.c  convert.h  frec-internal.h  frec-match.h  frec.h  frec2.h  hashtable.c  hashtable.h  heuristic.c  heuristic.h  interface-types.c  interface.c  match-utils.c  match.c  match.h  matchold.c  memory.c  memory.h  mregex.h  regex-parser.c  regex-parser.h  regexec.h  string-type.c  string-type.h  type-unification.c  type-unification.h  wm-comp.c  wm-comp.h  (+4 more)
libfrec/tests/: Makefile.am  check_boyer_moore.c  check_heuristic.c  check_interface_single.c  check_wu_manber.c
test/: Makefile
test/scripts/: benchmark.sh  gen_file.sh  gen_output.sh
test/sgrep/: Makefile  sgrep.c
tests/: Makefile.am  check_boyer_moore.c  check_heuristic.c
tests/.deps/: check_boyer_moore.Po
